--- a/validator/package.json
+++ b/validator/package.json
@@ -2,6 +2,7 @@
   "name": "validator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vdthatte.github.io/image-validator-tool",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "image-size": "^0.7.3",
@@ -12,6 +13,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
